Fix image alignment issues

--- a/docs/css/blog.css
+++ b/docs/css/blog.css
@@ -170,7 +170,7 @@ blockquote {
         flex-direction: column;
     }
 
-    .blog-image {
+    .blog-card-image {
         margin-bottom: 1.2em;
         align-self: center;
     }
